# wasmer-rust-example

./: Cargo.toml
benches/: bench_wasm.rs  bench_x64.rs
src/: main.rs
wasm-sample-app/: Cargo.toml
wasm-sample-app/src/: lib.rs
