[package]
name = "rust_embedder_app"
version = "0.4.0"
authors = ["The Wasmer Engineering Team <engineering@wasmer.io>"]
edition = "2018"

[workspace]

[dependencies]
wasmer-runtime = "0.16.0"
redox-ecc = { git = "https://github.com/armfazh/redox-ecc.git" }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "bench_wasm"
harness = false

[[bench]]
name = "bench_x64"
harness = false